# N-Body

./: pyproject.toml
src/core/: nbody_solver.py
src/nbody_engine/: main.py
